--- a/newindex-local.html
+++ b/newindex-local.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="ictiva">
-    <meta name="robots" content="noindex, nofollow" />
+    <meta name="robots" content="index, follow" />
     <meta name="language" content="es-ES" />
 
     <title>Tu Gimnasio en casa. Haz ejercicios en casa online con nuestros vídeos. Con nuestro gimnasio virtual podrás hacer gimnasia en casa cómodamente. - ictiva</title>
@@ -78,6 +78,31 @@
     <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 
+    <!--  Cookies Policy -->
+    <link rel="stylesheet" type="text/css" href="/homes/cookieconsent/cookieconsent.min.css" />
+    <script src="/homes/cookieconsent/cookieconsent.min.js"></script>
+    <script>
+    window.addEventListener("load", function(){
+    window.cookieconsent.initialise({
+      "palette": {
+        "popup": {
+          "background": "#3c404d",
+          "text": "#f6f6f6"
+        },
+        "button": {
+          "background": "#e57532",
+          "text": "#f6f6f6"
+        }
+      },
+      "position": "top",
+      "content": {
+        "message": "Utilizamos cookies propias y de terceros para mejorar nuestros servicios y mostrarle publicidad relacionada con sus preferencias mediante el análisis de sus hábitos de navegación. Puedes modificar esta opción en tu navegador, por tanto si continuas navegando sin modificarlo, consideramos que aceptas su uso.",
+        "dismiss": "Acepto",
+        "link": "¿Quieres ver nuestra política de cookies? ",
+        "href": "https://www.ictiva.com/condiciones-de-uso/"
+      }
+    })});
+    </script>
 
     <!-- Temporary navbar container fix -->
     <style>
@@ -125,10 +150,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <a class="nav-link" href="#id-servicios">Servicios</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase">
-                                <a class="nav-link" href="#id-dietas">Dietas y Recetas</a>
+                                <a class="nav-link" href="#id-dietas">Dietas</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase">
                                 <a class="nav-link" href="#id-app">App</a>
+                            </li>
+                            <li class="nav-item px-2 text-uppercase">
+                                <a class="nav-link" href="/salud/">Salud</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase">
                                 <a class="nav-link text-blue" href="http://www.ictivashop.com/">Shop</a>
