--- a/rutina-de-abdominales.html
+++ b/rutina-de-abdominales.html
@@ -258,15 +258,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </nav>
             <div class="col-5 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
-                    <li class="bg-grey-2 p-0 py-sm-2 p-xl-2 hidden-md-down">
+                    <li class="bg-grey-2 py-0 px-4 py-sm-2 p-xl-2">
                         <a class="text-dark btn text-uppercase" href="https://www.ictiva.com/tarifas/">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/">INICIA TU ENTRENAMIENTO</a>
-                    </li>
-                    <li class="bg-darkgrey p-0 py-sm-2 p-xl-2">
+                    </li><!-- 
+                    <li class="bg-darkgrey p-0 py-sm-2 p-xl-2 hidden-md-down">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
